--- a/09_DOM/index.html
+++ b/09_DOM/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="myText"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, aperiam blanditiis molestiae quod earum reprehenderit fugit incidunt adipisci veniam alias ut esse dolorum fuga quaerat praesentium architecto aliquid voluptatibus vitae?</p>
+    <!-- <p id="myText"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, aperiam blanditiis molestiae quod earum reprehenderit fugit incidunt adipisci veniam alias ut esse dolorum fuga quaerat praesentium architecto aliquid voluptatibus vitae?</p>
     <h1>Hello world !</h1>
-    <button>Click me</button>
+    <button>Click me</button> -->
+
+    <input type="text" placeholder="Write Your Name">
+    <p></p>
+    <button>Click </button>
 
 
     <script src="script.js"></script>
