add event and event handling

--- a/09_DOM/index.html
+++ b/09_DOM/index.html
@@ -10,12 +10,19 @@
     <h1>Hello world !</h1>
     <button>Click me</button> -->
 
-    <input type="text" placeholder="Write Your Name">
-    <p></p>
+    <!-- <input type="text" placeholder="Write Your Name"> -->
+    <input type="text" placeholder="Add Something">
+    <!-- <p></p> -->
+     <ul>
+
+     </ul>
     <button>Click </button>
 
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+     <script src="app.js" >
+       
+     </script>
     
 </body>
 </html>
