--- a/10_Event & Event Handling/index.html
+++ b/10_Event & Event Handling/index.html
@@ -7,16 +7,26 @@
 </head>
 <body>
     <!-- <button id = "button">Alert Button</button> <br> <br> -->
-        <p></p>
+        <!-- <p></p> -->
 
    <!-- <form >
     <input type="text" placeholder="Write your name">
     <button>Click me</button>
 
    </form> -->
-   <button>Change Background</button>
-   <script src="script.js"></script> 
+   <!-- <button>Change Background</button> -->
+
+
+   <!-- <script src="script.js"></script>  -->
   
+
+
+   <button>Click</button>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci architecto tenetur </p>
+   <input type="text" placeholder="Enter to find out what entered">
+   <script src="app.js" >
+    
+   </script>
    
 </body>
 </html>
